crates/tmark-writers/tests/snapshots/fixtures__progressbar@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-progress(0.25, label: "Research")
#ts-progress(0.45, label: "Review", thin: true)

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
