crates/tmark-writers/tests/snapshots/fixtures__reference-style-link@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><span id="claim"></span></p>
<p>See <a href="#claim" class="reference">the claim</a>, not [that][no-such-label].</p>
<p>The directive <a href="#claim" class="reference"><code>#include</code></a> keeps its code span.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
