crates/tmark-writers/tests/snapshots/fixtures__reference-style-link@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\phantomsection\label{claim}

See \hyperref[claim]{the claim}, not [that][no-such-label].

The directive \hyperref[claim]{\tscodeinline{\#include}} keeps its code span.

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
