crates/tmark-writers/tests/snapshots/fixtures__reference-style-link@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#metadata(none) <claim>

See #link(<claim>)[the claim], not \[that\]\[no-such-label\].

The directive #link(<claim>)[`#include`] keeps its code span.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
