crates/tmark-writers/tests/snapshots/fixtures__table-cell-bracket@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: (1fr, 1fr,),
  align: (left, left,),
  table.header([Directive], [Role]),
  [\[`#include`\]\[preprocessor-include\]], [Pastes a file],
  [\[note\]], [A literal bracket],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
